--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.1",
-    "next": "15.3.4",
+    "next": "^15.5.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
